fix bug; clean mass-transfer txs; clean docs
